--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,61 @@
+@charset "UTF-8";
+html, body {
+	margin: 0;
+	padding: 0;
+}
+div, h1, h2, h3, h4, h5, h6, p, ul, ol, dl, li, dt, dd, address, blockquote {
+	margin: 0;
+	padding: 0;
+}
+body {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 90%;
+}
+#header {
+	margin-bottom: 1em;
+	border-bottom: 2px solid #630;
+}
 
+
+p {
+	margin-bottom: 1em;	
+}
+#footer {
+	line-height: 50px;
+	text-align: center;
+	background: #630;
+	color: white;
+	font-size: 0.8em;
+	padding: 0em;
+	margin: 20px auto;
+}
+#footer a {
+	text-decoration: none;
+	font-weight: bold;
+	color: #CC9;
+	display: inline-block;
+}
+
+#header h1 {
+	color: #663300;
+	font: normal 3em Georgia, "Times New Roman", serif;
+}
+#header h2 {
+	margin-bottom: 0.5em;
+	font-size: 1.4em;
+}
+.alignLeft {
+	float: left;
+	padding-right: 1em;
+}
+
+.gallery img {
+	display: block;
+	margin: 0 auto;
+}
+.caption {
+	font-style: italic;
+	text-align: right;
+	margin-right: 1em;
+    text-align: center;
+}
