--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,15 @@ body {
 	border-bottom: 2px solid #630;
 }
 
+.middleColumns {
+    display: flex;
+    justify-content: space-between;
+}
+.middleColumns > div {
+    width: 30%;
+    background-color: tan;
+    
+}
 
 p {
 	margin-bottom: 1em;	
@@ -48,6 +57,14 @@ p {
 	float: left;
 	padding-right: 1em;
 }
+dt {
+    color: #663300;
+    font-weight: bold;
+    margin-bottom: 0.5em;
+}
+dd {
+    margin-bottom: 1em;
+}
 
 .gallery img {
 	display: block;
@@ -59,3 +76,19 @@ p {
 	margin-right: 1em;
     text-align: center;
 }
+
+@media only screen and (min-width: 481px) and (max-width: 800px) {
+    .middleColumns {
+    display: flex;
+    flex-wrap: wrap;
+}
+    .middleColumns div:nth-child(3){order: 2; width: 48%;}
+    .middleColumns div:nth-child(2){order: 3; width: 100%}
+    
+.middleColumns div{
+    width: 48%;
+    background-color: tan;
+}
+
+}
+    
